Chnaged width of the fancy box in fce and disabled horizontal scrollbars in all main fancyboxes fixes #436

--- a/public/stylesheets/sass/fancybox.sass
+++ b/public/stylesheets/sass/fancybox.sass
@@ -11,7 +11,7 @@ h1
       float: left    
 #translations_container
   font-size: 12px
-  width: 880px
+  width: 860px
   overflow-x: hidden
   h2
     padding: 0px
